apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__errors_with_invalid_paths_on_query_with_defer.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 710
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "computer": {
      "id": "Computer1"
    }
  },
  "errors": [
    {
      "message": "Subgraph error with invalid path",
      "extensions": {
        "service": "computers"
      }
    },
    {
      "message": "Subgraph error with partially valid path",
      "extensions": {
        "service": "computers"
      }
    }
  ],
  "hasNext": true
}
