apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__filter_nullified_deferred_responses-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1679
expression: deferred
---
{
  "hasNext": true,
  "incremental": [
    {
      "data": {
        "org": null
      },
      "path": [
        "currentUser"
      ],
      "extensions": {
        "valueCompletion": [
          {
            "message": "Cannot return null for non-nullable field Organization.nonNullId",
            "path": [
              "currentUser",
              "org",
              "nonNullId"
            ]
          }
        ]
      }
    }
  ]
}
