apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__filter_nullified_deferred_responses-3.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1684
expression: last
---
{
  "hasNext": false
}
