apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__interface_object_typename.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 3442
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "searchContacts": [
      {
        "inner": {
          "__typename": "Person",
          "country": "Fr"
        }
      }
    ]
  }
}
