apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__invalid_input_enum-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 3680
expression: response
---
{
  "errors": [
    {
      "message": "invalid type for variable: 'input'",
      "extensions": {
        "name": "input",
        "code": "VALIDATION_INVALID_TYPE_VARIABLE"
      }
    }
  ]
}
