apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__missing_entities.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 2723
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "currentUser": {
      "id": "0",
      "activeOrganization": {
        "id": "1",
        "name": null
      }
    }
  },
  "errors": [
    {
      "message": "error",
      "path": [
        "currentUser",
        "activeOrganization"
      ],
      "extensions": {
        "service": "orga"
      }
    }
  ]
}
