apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__no_typename_on_interface-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 2858
expression: with_typename
---
{
  "data": {
    "dog": {
      "id": "8765",
      "__typename": "Dog",
      "name": "Spot"
    }
  }
}
