apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__no_typename_on_interface-3.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 2901
expression: with_reversed_fragments
---
{
  "data": {
    "dog": {
      "name": "Spot",
      "id": "0000"
    }
  }
}
