apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__no_typename_on_interface.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 2814
expression: no_typename
---
{
  "data": {
    "dog": {
      "id": "4321",
      "name": "Spot"
    }
  }
}
