apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__nullability_bubbling.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 435
expression: response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": null
    }
  },
  "extensions": {
    "valueCompletion": [
      {
        "message": "Cannot return null for non-nullable field Organization.nonNullId",
        "path": [
          "currentUser",
          "activeOrganization"
        ]
      }
    ]
  }
}
